# manim-core

./: .gitignore  Cargo.toml  pyproject.toml
python/manim_core/: __init__.py  _rust.pyi  pool_manager.py
python/manim_core/patches/: __init__.py  animation_patch.py  camera_patch.py  hashing_patch.py  interpolation_patch.py  rendering_patch.py  scene_patch.py  shading_patch.py  vmobject_patch.py
src/: batch_render.rs  hashing.rs  interpolation.rs  lib.rs  mesh_pool.rs  projection.rs  rendering.rs  shading.rs  tree.rs
tests/: benchmark.py  test_hashing.py  test_interpolation.py  test_projection.py  test_rendering.py  test_shading.py  test_z_sort.py
