[package]
name = "manim_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "manim_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ahash = "0.8"
rayon = "1.10"
tiny-skia = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
